# traffic-violation-detection-image-processing

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.ebextensions/: 01-swap.config
.github/workflows/: ci.yml
Dashboard/: README.md
Dashboard/src/: main.tsx
Dashboard/src/context/: ThemeContext.tsx
Dashboard/src/hooks/: useFetch.ts
Dashboard/src/layouts/: AppLayout.tsx
Dashboard/src/lib/: api.test.ts  api.ts  constants.ts  derive.test.ts  derive.ts
api/: main.py  schemas.py
api/routes/: analytics.py  challans.py  evidence.py  violations.py
client/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
client/src/: App.tsx  index.css  main.tsx
configs/: config.yaml
docs/: api.md  capabilities.md  compute_efficiency.md  design.md  extra-setup.md  features.json  implementation_plan.md  production_upgrade.md  research.md  windows-setup.md
outputs/: challans.jsonl  metrics.json  violations.jsonl
scripts/: check_llm.py
src/: detector.py  evaluate.py  evidence.py  llm_classifier.py  lpr.py  pipeline.py  preprocessing.py  triple_riding.py  youtube_extractor.py
tests/: conftest.py
tests/test_api/: test_routes.py
tests/test_src/: test_detector.py  test_evaluate.py  test_evidence.py  test_llm_classifier.py  test_lpr.py  test_pipeline.py  test_preprocessing.py  test_triple_riding.py  test_youtube_extractor.py
utils/: config.py  logger.py
(+74 files in other folders)
