[project]
name = "traffic-violation-prototype"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ultralytics>=8.1.0",
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "Pillow>=10.0.0",
    "pyyaml>=6.0",
    "groq>=0.4.1",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0"
]

[dependency-groups]
dev = [
    "black>=24.0",
    "pytest>=8.0",
    "kaggle>=1.6",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
pythonpath = ["."]